force-app/main/default/objects/Insurance__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Agent commission rate for this policy, as a percent. Set per policy (can vary by policy).</description>
    <inlineHelpText>Enter the commission rate for this policy as a percent (e.g. 50 or 90).</inlineHelpText>
    <label>Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>