force-app/main/default/objects/Insurance__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the insurance premium has been paid in full or not.</description>
    <inlineHelpText>Check this box if the insurance premium has been fully paid by the policyholder or responsible party. Leave it unchecked if payment is still pending or partially paid.</inlineHelpText>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>