force-app/main/default/objects/Insurance__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Returns the actual policy number by removing the appended status from the Name field.</description>
    <formula>IF(
    CONTAINS(Name, &quot; (&quot;),
    LEFT(Name, FIND(&quot; (&quot;, Name) - 1),
    Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the policy number portion of the record Name before the status suffix.</inlineHelpText>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>