force-app/main/default/objects/Insurance__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <description>Specifies the total premium amount charged for the insurance policy.</description>
    <inlineHelpText>Enter the premium amount for this insurance policy. This represents the cost of coverage, either billed as a one-time, monthly, or annual payment, depending on the policy terms.</inlineHelpText>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>