force-app/main/default/objects/Insurance__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The renewal Opportunity that produced this Insurance record. Populated automatically when a new policy is created from a Closed Won renewal.</description>
    <inlineHelpText>For policies created via the renewal pipeline, this links back to the source renewal Opportunity. Empty for the original (pre-renewal) record.</inlineHelpText>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resulting Insurance</relationshipLabel>
    <relationshipName>Resulting_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>