force-app/main/default/objects/Insurance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>Indicates the current lifecycle state of the insurance policy.</description>
    <inlineHelpText>Select the status that reflects the current stage of the insurance policy.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
                <isActive>false</isActive>
                <label>Disqualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>