force-app/main/default/objects/Insurance__c/fields/Subagent__c.field-meta.xml
<CustomField>
    <fullName>Subagent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the sub-agent associated with this Insurance record. Used to track hierarchical agent relationships and support reporting, attribution, and operational visibility.</description>
    <inlineHelpText>Select the sub-agent responsible for or associated with this Insurance record. This field links the Insurance to a subordinate agent for tracking, reporting, and management purposes.</inlineHelpText>
    <label>Subagent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Company records with Record Type Agent are available for selection.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance (Subagent)</relationshipLabel>
    <relationshipName>Insurance1</relationshipName>
    <type>Lookup</type>
</CustomField>