force-app/main/default/objects/Insurance__c/recordTypes/Auto_Home_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Auto_Home_Insurance</fullName>
    <active>true</active>
    <description>This record type is used for insurance policies that cover automobile and/or homeowner-related risks. It includes policy records for individual or bundled auto and home insurance coverage, capturing details such as vehicle/property information, insured va</description>
    <label>Auto/Home</label>
</RecordType>