force-app/main/default/objects/Insurance__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>Used for commercial insurance policies, with layouts and fields tailored for business-related coverage and risk management.</description>
    <label>Commercial</label>
</RecordType>