force-app/main/default/objects/Insurance__c/recordTypes/Group_Health.recordType-meta.xml
<RecordType>
    <fullName>Group_Health</fullName>
    <active>true</active>
    <description>Manages group health insurance policies, with customized fields and layouts for employer-sponsored health coverage.</description>
    <label>Group Health</label>
</RecordType>