force-app/main/default/objects/Insurance__c/listViews/Company_Required_For_Renewal.listView-meta.xml
<ListView>
    <fullName>Company_Required_For_Renewal</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Policy_Holder__c</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Insurance_End_Date__c</columns>
    <columns>Renewal_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Insurance__c.Commercial</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Insurance__c.Group_Health</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value />
    </filters>
    <label>Company Required for Renewal</label>
</ListView>