force-app/main/default/objects/Insurance__c/listViews/Copy_of_Medicare.listView-meta.xml
<ListView>
    <fullName>Copy_of_Medicare</fullName>
    <columns>NAME</columns>
    <columns>Policy_Holder__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Status__c</columns>
    <columns>Insurance_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Insurance_Provider__c</field>
        <operation>equals</operation>
        <value>Cigna</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Med Supp,PDP,R-MAPD</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Medicare_Cigna</label>
</ListView>