force-app/main/default/objects/Insurance__c/listViews/Medicare_Cigna.listView-meta.xml
<ListView>
    <fullName>Medicare_Cigna</fullName>
    <columns>NAME</columns>
    <columns>Policy_Holder__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Insurance__c.Medicare</value>
    </filters>
    <filters>
        <field>Insurance_Provider__c</field>
        <operation>equals</operation>
        <value>Cigna</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>2026 Medicare_Healthsrping</label>
</ListView>