force-app/main/default/objects/Insurance__c/listViews/UHone_Insurances.listView-meta.xml
<ListView>
    <fullName>UHone_Insurances</fullName>
    <columns>NAME</columns>
    <columns>Policy_Holder__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Subtype__c</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Insurance_Start_Date__c</columns>
    <columns>Insurance_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Insurance_Provider__c</field>
        <operation>equals</operation>
        <value>UHone</value>
    </filters>
    <label>UHone Insurances</label>
</ListView>